@@ -1,4 +1,5 @@
 Changes
+examples/create_and_print_value.pl
 examples/create_and_print_value_globecoordinate.pl
 examples/create_and_print_value_item.pl
 examples/create_and_print_value_monolingual.pl
